# simplezarr

./: .gitignore  README.md  pyproject.toml
simplezarr/: __init__.py  _version.py  codecs.py  core.py  stores.py
tests/: test_codecs.py  test_stores.py
