# ===== Project info

[project]
dynamic = ["version"]
name = "simplezarr"
description = "A simple, elegant, and efficient Zarr implementation."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Almar Klein" }]
keywords = ["zarr"]
requires-python = ">= 3.10"
dependencies = ['numpy']
[project.optional-dependencies]
lint = ["ruff", "pre-commit"]
docs = ["sphinx>7.2", "sphinx_rtd_theme"]
tests = ["pytest"]
dev = ["simplezarr[lint,tests,docs]"]

[project.urls]
Homepage = "https://github.com/almarklein/simplezarr"
Repository = "https://github.com/almarklein/simplezarr"
# Documentation = "https://simplezarr.readthedocs.io"

# ===== Building

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# ===== Tooling

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "N", "B", "RUF"]
ignore = [
    "E501",   # Line too long
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]
